[gd_scene load_steps=7 format=3 uid="uid://cs8d2h3ldiamk"]

[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.digression/editor/nodes/EditorGraphNodeBase.tscn" id="1_40vcr"]
[ext_resource type="Script" uid="uid://co3hdtsddxlek" path="res://addons/hyh.digression/editor/nodes/EditorMatchBranchNode.gd" id="6_2lu8v"]
[ext_resource type="PackedScene" uid="uid://c31q0dbk4i25w" path="res://addons/hyh.digression/editor/controls/VariableSelectionControl.tscn" id="7_61d5t"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.digression/icons/icon_add.svg" id="8_pxhqs"]
[ext_resource type="PackedScene" uid="uid://co4le7crf047l" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.tscn" id="9_7nl6g"]
[ext_resource type="PackedScene" uid="uid://blu15ehhb5avh" path="res://addons/hyh.digression/editor/branches/EditorMatchBranchValue.tscn" id="9_ii30g"]

[node name="EditorBranchNode" instance=ExtResource("1_40vcr")]
offset_top = 1.0
offset_right = 487.0
offset_bottom = 210.0
theme_type_variation = &"ControlGraphNode"
title = "Branch (Match)"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("6_2lu8v")

[node name="MC" type="MarginContainer" parent="." index="1"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="MC" index="0"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="MC/VB" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="GC" type="GridContainer" parent="MC/VB/HeaderContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="MC/VB/HeaderContainer/GC" index="0"]
layout_mode = 2
text = "Variable:"

[node name="VariableSelectionControl" parent="MC/VB/HeaderContainer/GC" index="1" instance=ExtResource("7_61d5t")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MC/VB/HeaderContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 8
text = "default"

[node name="DragTargetHSeparator" parent="MC/VB" index="1" instance=ExtResource("9_7nl6g")]
layout_mode = 2
accepted_classes = Array[int]([2])

[node name="BranchValue" parent="." index="2" instance=ExtResource("9_ii30g")]
layout_mode = 2

[node name="BranchValue2" parent="." index="3" instance=ExtResource("9_ii30g")]
layout_mode = 2

[node name="AddBranchContainer" type="MarginContainer" parent="." index="4"]
layout_mode = 2

[node name="AddBranchButton" type="Button" parent="AddBranchContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 6
text = "Add Branch"
icon = ExtResource("8_pxhqs")
flat = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="variable_selected" from="MC/VB/HeaderContainer/GC/VariableSelectionControl" to="." method="_on_variable_selection_control_variable_selected"]
[connection signal="dropped" from="MC/VB/DragTargetHSeparator" to="." method="_on_drag_target_dropped"]
[connection signal="dropped_after" from="BranchValue" to="." method="_on_branch_dropped_after" binds= [true]]
[connection signal="modified" from="BranchValue" to="." method="_on_branch_modified" binds= [0]]
[connection signal="preparing_to_change_parent" from="BranchValue" to="." method="_on_branch_preparing_to_change_parent" binds= [true]]
[connection signal="remove_requested" from="BranchValue" to="." method="_on_branch_remove_requested" binds= [0]]
[connection signal="dropped_after" from="BranchValue2" to="." method="_on_branch_dropped_after" binds= [false]]
[connection signal="modified" from="BranchValue2" to="." method="_on_branch_modified" binds= [1]]
[connection signal="preparing_to_change_parent" from="BranchValue2" to="." method="_on_branch_preparing_to_change_parent" binds= [false]]
[connection signal="remove_requested" from="BranchValue2" to="." method="_on_branch_remove_requested" binds= [1]]
[connection signal="pressed" from="AddBranchContainer/AddBranchButton" to="." method="_on_add_branch_button_pressed"]
